# codex-app-linux

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DESIGN.md  Makefile  PRODUCT.md  README.md  SECURITY.md  codex-app-linux-threat-model.md  config.toml  flake.nix  install.sh  security_best_practices_report.md
.agents/: fork-sync-policy.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
computer-use-linux/: Cargo.toml
computer-use-linux/src/: abs_pointer.rs  atspi_tree.rs  cosmic_helper.rs  diagnostics.rs  gnome_extension.rs  main.rs  remote_desktop.rs  screenshot.rs  server.rs  windows.rs
computer-use-linux/src/windowing/: mod.rs  registry.rs  target.rs
computer-use-linux/src/windowing/backends/: gnome.rs  hyprland.rs  i3.rs  kwin.rs
docs/: README.md  backlog.md  github-cli-auth.md  port-architecture.md  port-integrations-architecture.md  webview-server-evaluation.md
launcher/: start.sh.template  webview-server.py
linux-features/: README.md
nix/: home-manager-module.nix  nixos-module.nix
port-integrations/: README.md  integrations.example.json
read-aloud-linux/: Cargo.toml
read-aloud-linux/src/: main.rs
scripts/: bootstrap-wizard.sh  build-appimage.sh  build-deb.sh  build-pacman.sh  build-rpm.sh  ci-local.sh  inspect-electron-security.js  install-deps.sh  patch-linux-window-ui.js  patch-linux-window-ui.test.js  rebuild-candidate.sh  release-gate.sh  verify-apple-dmg.sh
tests/: scripts_smoke.sh  webview_probe_equivalence.sh
updater/: Cargo.toml  trusted-dmg-manifest.json
(+248 files in other folders)
