[package]
name = "codex-computer-use-linux"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "codex-computer-use-linux"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
atspi = { version = "0.29.0", features = ["tokio"] }
base64 = "0.22.1"
futures-util = "0.3.32"
rmcp = { version = "1.5.0", features = ["transport-io"] }
schemars = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["macros", "rt", "time"] }
zbus = "5.14.0"
